# HonchoMemoryChat

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py
backend/app/db/: users.py
backend/app/routes/: __init__.py  auth.py  chat.py  sessions.py
backend/app/schemas/: auth.py  chat.py
backend/app/services/: honcho.py  honcho_service.py
config/: honcho.env
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Auth.jsx  Chat.jsx  ThemeToggle.jsx  icons.jsx
frontend/src/styles/: global.css
