[project]
name = "honcho-memory-chat-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "honcho-ai>=2.2.0",
    "pydantic>=2.0.0",
    "email-validator>=2.0.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.3.0",
]